# zendesk-skill

./: Dockerfile  SETUP_FOR_NASSIM.md  pyproject.toml  render.yaml
.github/workflows/: copy-lock.yml  fix-operations.yml  regenerate-lock.yml  test.yml
src/zendesk_skill/: __init__.py  operations.py  remote_auth.py  render_entrypoint.py  server.py  storage.py  talk.py
tests/: test_model_cache.py  test_remote_auth.py  test_render_entrypoint.py  test_talk.py
