[project]
name = "zd-cli"
version = "1.3.3"
description = "Zendesk CLI and MCP Server for Claude Code - Search tickets, manage support, and analyze metrics"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.8.0,<2",
    "prompt-security-utils>=1.4.0",
    "mistune>=3.0.0",
    "cryptography>=42.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.urls]
Repository = "https://github.com/andmarios/zendesk-skill"

[project.scripts]
zd-cli = "zendesk_skill.cli:main_cli"
zendesk-mcp = "zendesk_skill.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zendesk_skill"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
